--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,16 +18,19 @@
   <link rel="stylesheet" href="assets/css/shared/style.css">
   <link rel="stylesheet" href="assets/css/demo_1/style.css">
   <link rel="shortcut icon" href="assets/images/favicon.ico" />
-  <title>Dashboard | AQUABOX Control and Monitor System</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/logo192.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="Ocems">
+  <title>Ocems Ebhoom</title>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <!-- <button id="install-button" style="display: none;">Install App</button> -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
+  <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
   <script src="assets/vendors/js/vendor.bundle.base.js"></script>
   <script src="assets/vendors/js/vendor.bundle.addons.js"></script>
   <script src="assets/js/shared/off-canvas.js"></script>
