--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,6 +28,7 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
+  <button id="install-button" style="display: none;">Install</button>
   <script src=" https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
@@ -59,7 +60,7 @@
       }
     });
 
-    document.getElementById('install-button').addEventListener('click', async () => {
+    document.getElementById('install-button')?.addEventListener('click', async () => {
       const promptEvent = window.deferredPrompt;
       if (promptEvent) {
         promptEvent.prompt();
